# task-man

./: LICENSE  README.md  main.py  manage.py  pyproject.toml
taskman/: asgi.py  settings.py  urls.py  wsgi.py
tasks/: models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_competed.py
tasks/templates/: base.html  index.html
theme/static_src/: package-lock.json
