[project]
name = "task-man"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "django-htmx>=1.28.0",
    "django-tailwind[cookiecutter,honcho,reload]>=4.5.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.7",
]
